# rusty-cortex

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/specs/: design-dna.md
scripts/: diag-nexus6p.sh
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  types.rs
src-tauri/src/device/: detect.rs
src-tauri/src/flash/: manager.rs  mod.rs  validation.rs
src-tauri/src/protocols/: adb_usb.rs  edl.rs  edl_db.rs  edl_gpt.rs  edl_mbn.rs  edl_usb.rs  edl_xml.rs  fastboot.rs  mod.rs  sparse.rs
src-tauri/src/protocols/adb/: dump.rs  install.rs  logcat.rs  mod.rs  shell.rs  sideload.rs  sync.rs
src/lib/: types.ts
src/lib/components/: AdbControls.svelte  BottomPanel.svelte  DeviceBrowser.svelte  DumpControls.svelte  EdlControls.svelte  EdlPartitionRead.svelte  EdlPartitionWrite.svelte  FileTransfer.svelte  FlashControls.svelte  GptViewer.svelte  LogPanel.svelte  PartitionRead.svelte  PartitionWrite.svelte  ProgressBar.svelte  ShellTerminal.svelte  Sidebar.svelte  ThemeToggle.svelte  Workspace.svelte
src/lib/stores/: device.ts  flash.ts  log.ts  terminalColor.ts  theme.ts  usb.ts
