[package]
name = "rusty-cortex"
version = "0.8.8"
description = "Multi-protocol mobile phone flashing tool"
authors = []
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_cortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
nusb = "0.1"
fastboot-protocol = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
thiserror = "2"
dirs-next = "2"
adb_client = "3"
rsa = { version = "0.9", features = ["pem"] }
sha1 = "0.10"
base64 = "0.22"
signature = "2"
pollster = "0.4"
hex = "0.4"
qdl = { git = "https://github.com/qualcomm/qdlrs", default-features = false, features = ["serial"] }
quick-xml = "0.37"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winreg = "0.55"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"

[patch.crates-io]
nusb = { path = "../vendor/nusb" }
